Playground (?) with the backache effect
Commit w/ the pain at my back and legs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
             <label for="numinput">Enter a number: </label>
             <input type="number" id="nums">
             <button id="enter"> Enter </button>
+            <h1 id="display1"></h1>
             <script type="text/javascript" src="exercise1.js"></script>
+
+            <h1> Guss Damn Good Lover! </h1>
+            <script type="text/javascript" src="exercise2.js"></script>
         </body>
 </html>
